# fcc-microservices

./: .flake8  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
docker/auth/: Dockerfile
docker/gateway/: Dockerfile
services/auth/: .pytest.ini  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  testdb.sqlite
services/auth/app/: context.py  main.py  models.py  services.py  settings.py  views.py
services/auth/app/tests/: conftest.py
services/auth/app/tests/api/: conftest.py  test_views.py
services/auth/app/tests/unit/: test_services.py
services/auth/manifests/: auth-configmap.yaml  auth-deploy.yaml  auth-secret.yaml  auth-service.yaml
services/auth/src/auth/: app.py  context.py  main.py  models.py  schemas.py  services.py  settings.py  views.py
services/auth/src/tests/: conftest.py  factories.py
services/auth/src/tests/api/: conftest.py  test_views.py
services/auth/src/tests/unit/: test_services.py
services/gateway/: Dockerfile  docker-compose.yml  requirements.txt
services/gateway/src/gateway/: app.py  clients.py  context.py  schemas.py  services.py  settings.py  views.py
