[tool.poetry]
name = "fcc-microservices"
version = "0.1.0"
description = ""
authors = ["DimaK <korbanitskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
email-validator = "^2.1.1"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
uvicorn = "^0.27.1"
orjson = "^3.9.15"
ormar = "^0.12.2"
asyncpg = "^0.29.0"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
